📘 Add structured FAQ for Mentoring Finance covering IFRS and Valuation courses

--- a/FAQ.txt
+++ b/FAQ.txt
@@ -1,4 +1,8 @@
-📘 Mentoring Finance – FAQ for IFRS Chatbot 
+📘 Mentoring Finance – FAQ for IFRS & Valuation Courses
+
+=========================
+💼 IFRS COURSE – FREQUENTLY ASKED QUESTIONS
+=========================
 
 Q1: What is IFRS?
 International Financial Reporting Standards (IFRS) are globally recognised accounting standards issued by the IFRS Foundation and currently adopted in 168+ jurisdictions.
@@ -20,7 +24,7 @@ Q6: Who is eligible to enrol?
 - B.Com + 2 years of relevant experience
 - Other qualifications + 3 years of relevant experience
 
-Q7: What are the course formats and fees?
+Q7: What are the IFRS course formats and fees?
 - Live + Recorded: 14 Sundays (1–6 PM) + 90 hrs recorded lectures | ₹20,500 incl. GST
 - Pre-recorded Only: 80 hrs | ₹15,500 incl. GST
 
@@ -90,3 +94,80 @@ Q17: How to contact for queries or support?
 Call: 9167146714
 WhatsApp: 9167446744
 Website: https://www.mentoringfinance.com
+
+===============================
+🧑‍🏫 About the Mentor – CA Rammohan Bhave
+===============================
+
+Q18: Who is Rammohan Bhave?
+Rammohan Bhave is a Chartered Accountant (CA), Cost and Management Accountant (CMA), and Company Secretary (CS) with over 30 years of experience in the finance industry.
+
+Q19: What is his role at Mentoring Finance?
+He is the key faculty and consultant at Mentoring Finance, offering guidance to over 100 corporates on IFRS and IndAS.
+
+Q20: What other professional roles has he held?
+He has served as CFO across 7 countries, Independent Director in several companies, and a core financial consultant to numerous corporates.
+
+Q21: What is his educational and industry background?
+He is an alumnus of Reliance (under Mr. Mukesh Ambani), Foundsoft.com USA, and Mittal London.
+
+Q22: How long has he been involved in consulting and faculty roles?
+He has been active in consulting and teaching for the last 13 years, specializing in IFRS, IndAS, and valuation.
+
+Q23: What is his global reach as a mentor?
+His students span across 31 countries and 131 cities worldwide.
+
+Q24: What leadership position does he hold in valuation?
+He is the President of the Association of Valuation Professionals.
+
+Q25: What are some of his areas of expertise?
+His expertise includes mergers and acquisitions, IFRS, IndAS, USGAAP, business strategy, and valuation.
+
+Q26: How experienced is he as a speaker and trainer?
+He has delivered over 2800 lectures in the last 11 years on IFRS, IndAS, and valuation.
+
+Q27: Has he implemented IFRS and IndAS in real-world scenarios?
+Yes, he has carried out more than 100 IFRS and IndAS implementations across 20+ industry sectors.
+
+Q28: Where has he served as a faculty member?
+He has been a faculty at prestigious institutions like RBI, SBI, IBBI, EcoTimes, IMC, BSE, LIC, CAG, NIBM, and all RVOs.
+
+Q29: Has he published any content on his subject matter?
+Yes, he has published several articles on IFRS and IndAS valuation and has conducted many webinars available on YouTube.
+
+===============================
+📊 VALUATION COURSE – FREQUENTLY ASKED QUESTIONS
+===============================
+
+Q30: What is the format of the Valuation Course?
+The course is conducted online via Zoom for 300 hours, with sessions held from Monday to Friday, 9 to 10 PM.
+
+Q31: Are the sessions live or recorded?
+Sessions are live, but students also get access to pre-recorded lectures with a validity of 1 month plus the lecture month.
+
+Q32: Is there a certification provided?
+Yes, a certificate is awarded at three stages — Regular, Advanced, and Star — based on the stage of course completion.
+
+Q33: What is the course fee structure?
+For early admissions, the fee is ₹7777/- including GST (₹8888/- later). For past/current IFRS students, the fee is ₹3333/- (₹4444/- later).
+
+Q34: Until when is the discounted fee valid?
+The discounted fee is valid up to 31st January 2024.
+
+Q35: How can one enroll in the course?
+Interested candidates can WhatsApp 9167146714 to enroll immediately.
+
+Q36: What topics does the course cover?
+The course includes Business Valuation, Start-up Valuation, ESOP Valuation, Intangibles Valuation, Excel Working Methods, and more.
+
+Q37: Does it involve practical training?
+Yes, the course offers Excel sheet working methods and practical case studies.
+
+Q38: Are global standards covered in the curriculum?
+Yes, the course includes a review of global and ICAI Valuation Standards.
+
+Q39: What foundational concepts are included?
+Topics like concept, purpose, assumptions, projections, valuation approaches and methods are thoroughly covered.
+
+Q40: What is the outcome of this course?
+Participants will be able to prepare valuation reports and apply concepts in real-world scenarios.
